# Pudgect

./: .clang-format  CMakeLists.txt  grammar.txt
include/: driver.hpp  form.hpp  lexer.hpp  node.hpp  tree.hpp
sources/: driver.cpp  driver.hpp  form.cpp  main.cpp
sources/lexer/: lexer.hpp  lexer.l
sources/parser/: grammar.y
tests/: generator.cpp  test.txt
